Added a new properties value for limiting search results.

--- a/src/main/resources/app.properties.example
+++ b/src/main/resources/app.properties.example
@@ -290,3 +290,6 @@ nysenate.gov.url = https://www.NYSenate.gov
 
 # The Open Legislation source code directory. Used by member scripts when downloading senator images.
 source.code.directory = "/home/user/OpenLegislation"
+
+# Limits search results to prevent OOM exceptions and slowdowns.
+limit.search.results = true
